--- a/Project-1/Apache_sample.html
+++ b/Project-1/Apache_sample.html
@@ -37,9 +37,8 @@
 	   </aside>
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
-				<h2 class="linkFont">GCC</h2>
 				<p class="msg"><em id="parag">A look at GCC</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine</p>
-				<div class="heroinfo"><a href="#" class="herotext">demonstration</a>
+				<div class="heroinfo"><a href="index.html" class="herotext">back to home</a>
 				</div>
 			</section>
 		</div>
