--- a/Project-1/GCC_sample.html
+++ b/Project-1/GCC_sample.html
@@ -28,22 +28,22 @@
 			</section>
 		</header>
 	</main>
-
 	<main class="maincontainer">
 	   <aside>
 		   <div class="leftblock1">
 			   <img src="images/gcc1.png" class="introImage1">
 		   </div>
 	   </aside>
+
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
-				<h2 class="linkFont">GCC</h2>
 				<p class="msg"><em id="parag">Example of a compiled C program.<em><br><p class="msg">Using the C compiler suite is simple, a source code file and destination/output file name for the executable is provided.</p>
-				<div class="heroinfo"><a href="#" class="herotext">demonstration</a>
+				<div class="heroinfo"><a href="index.html" class="herotext">back to home</a>
 				</div>
 			</section>
 		</div>
 					</main>
+
    <main class="footercontainer">
    <footer class="footer">
 	   <section class="footercustomer">
