--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -11,14 +11,14 @@ A footer should be included at the bottom with two different text sizes.
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>lab 10, Responsive Web Page</title>
+   <title>Project 1</title>
    <link href="index.css" rel=stylesheet>
 </head>
 <body>
-	<main class="imgcontainerv2">
+	<main class="headcontainer">
 		<header class="header">
 			<section class="exc8_HeroSection">
-				<div class="excImage1">
+				<div class="headerimage">
 					<div>
 						<nav class="navbar">
 							<ul class="flexNav">
@@ -42,7 +42,6 @@ A footer should be included at the bottom with two different text sizes.
 			</section>
 		</header>
 	</main>
-
 	<main class="maincontainer">
 	   <aside>
 		   <div class="leftblock1">
@@ -66,7 +65,9 @@ A footer should be included at the bottom with two different text sizes.
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
 				<h2 class="linkFont">Apache</h2>
-				<p class="msg">Hosting webservers is typically done with a service. Apache is one of many services. The many aspects of keeping a domain open with connections live and secure requires a large software repoitaire as seen in webserver scripts and hooks. Webpages are a unique product of an architecture provided such as Apache. For instance Apache supports many languages like Perl, which in itself can be used to automate networked software.</p>
+
+				<p class="msg">Hosting webservers is typically done with a service. Apache is one such service. Web site content can take many different forms, but may be broadly divided into static and dynamic content. The many aspects of keeping a domain open with connections live and secure requires large software repoitaire as seen in webserver scripts and hooks. Webpages are a unique product of an architecture provided such as Apache. For instance Apache supports many languages like Perl, which in itself can be used to automate networked software. Web site content can take many different forms, but may be broadly divided into static and dynamic content.
+</p>
 				<div class="heroinfo"><a href="Apache_sample.html" class="herotext">demonstration</a>
 				</div>
 			</section>
@@ -153,7 +154,7 @@ A footer should be included at the bottom with two different text sizes.
 	<section class="footerfollow">
 		<p class="footertitle">Email</p>
 		<div class="socialmedia"><a href=""><img class="socialmedia" src="images/Chat_icon.png"></a>
-		<a href=""><img class="socialmedia" src="images/Logo_of_Twitter.svg.png"></a></div>
+		<a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.makeagif.com%2Fmedia%2F4-25-2018%2FqIHGNg.gif&f=1&nofb=1&ipt=f73260ab6353fced9c7d9a6d23a7295f6e8c8a9d086b0f69fa20456ec5c94e72&ipo=images"><img class="socialmedia" src="images/Logo_of_Twitter.svg.png"></a></div>
 	<p>Email: <a href="mailto:jorge.garib11@student.qcc.cuny.edu">jorge.garib11@student.qcc.cuny.edu</a></p><p class="">Created by Jorge Garib Guillen</p>
 	</section>
      </footer>
