--- a/Project-1/Postfix.html
+++ b/Project-1/Postfix.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>lab 10, Responsive Web Page</title>
-   <link href="sample.css" rel=stylesheet>
+   <link href="index.css" rel=stylesheet>
 </head>
 <body>
 	<main class="imgcontainerv2">
