--- a/Project-1/newpage.html
+++ b/Project-1/newpage.html
@@ -4,10 +4,10 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Project 1</title>
-   <link href="index.css" rel=stylesheet>
+   <link href="newpage.css" rel=stylesheet>
 </head>
 <body>
-	<main class="imgcontainerv2">
+	<main class="headercontainer">
 		<header class="header">
 			<section class="exc8_HeroSection">
 				<div class="headerimage">
@@ -34,28 +34,20 @@
 			</section>
 		</header>
 	</main>
+<main class="maincontainer">
+<div class="leftblock">
+<section class="infosection">SECTION
+<p class="msg">Hosting webservers is typically done with a service. Apache is one such service. Web site content can take many different forms, but may be broadly divided into static and dynamic content. The many aspects of keeping a domain open with connections live and secure requires large software repoitaire as seen in webserver scripts and hooks. Webpages are a unique product of an architecture provided such as Apache. For instance Apache supports many languages like Perl, which in itself can be used to automate networked software. Web site content can take many different forms, but may be broadly divided into static and dynamic content.
+</p>
 
-	<main class="maincontainer">
-	   <aside>
-		   <div class="leftblock1">
-			   <img src="images/zhongwei-desert-diamond-hotel-shuishi_2.jpg" class="introImage1">
-		   </div>
-	   </aside>
-	   	<div class="rightblock1">
-	   		<section class="infosection1">
-				<p class="msg"><em id="parag">Working with Apache</em><br><p class="msg">Apache is interesting as it can be implemented the same as any virtualization architecture model. The network programming of the httpd daemon is actually the pillar of its success, let's take a look at how we would manage a website. Debian's default Apache2 installation attempts to make adding and removing modules, virtual hosts, and extra configuration directives as flexible as possible, in order to make automating the changes and administering the server as easy as possible. This is how we would get things done in debian. Due to the use of environment variables, apache2 needs to be started/stopped with '/etc/init.d/apache2', apachectl, or apache2ctl. Calling '/usr/bin/apache2' directly will not work with the default configuration. To call apache2 with specific command line arguments, just call apache2ctl with the same arguments.</p>
-				<div class="heroinfo"><a href="index.html" class="herotext">back to home</a>
-				</div>
-			</section>
-		</div>
-					</main>
-
-	<h1 align="center">Beautiful picture of the same tree - Malus Ioensis</h1>
-   <figure class="images">
-	<img class="slides" src="images/gcc2.png">
-   </figure>
-	<h3><i>Learn & Explore</i></h3>
-	<p>Apache2ctl is the swiss army knife for working with the daemon (kernel process) Running the Apache http server from a workstation, there would be primitives in the environment such as what init system is running the kernel, or the type of security configurations available to the system.</p>
+</section>
+<article class="newsarticle">
+	<p class="msg">Hosting webservers is typically done with a service. Apache is one such service. Web site content can take many different forms, but may be broadly divided into static and dynamic content. The many aspects of keeping a domain open with connections live and secure requires large software repoitaire as seen in webserver scripts and hooks. Webpages are a unique product of an architecture provided such as Apache. For instance Apache supports many languages like Perl, which in itself can be used to automate networked software. Web site content can take many different forms, but may be broadly divided into static and dynamic content.
+</p>
+	ARTICLE</article>
+</div>
+<div class="images">IMAGES	<img class="slides" src="images/gcc2.png">
+</main>
    <main class="footercontainer">
    <footer class="footer">
 	   <section class="footercustomer">
