--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        	       <a href="Lab-6_layout_and_styling_navigation_bar/Class-Exercise_Lab-6.html" target="_blank" rel="noopener noreferrer">Lab-6 Layout and Styling/ Nav bar</a>
             </div>
 	    <div>
-       	       <a href="Lab-7/index.html" target="_blank" rel="noopener noreferrer">Lab 7: Fixed layout Responsive Design</a>
+       	       <a href="Lab-7/index.html" target="_blank" rel="noopener noreferrer">Lab 7: Fixed-layout Website</a>
             </div>
 	    <div>
        	       <a href="Lab-8/lab8.html" target="_blank" rel="noopener noreferrer">Lab 8: Further CSS & Responsive Design</a>
@@ -41,6 +41,9 @@
             </div>
 	    <div>
        	       <a href="Project-1/index.html" target="_blank" rel="noopener noreferrer">Project 1</a>
+            </div>
+	    <div>
+       	       <a href="https://github.com/Mag-Aegis/index.html" target="_blank" rel="noopener noreferrer">Bootstrap</a>
             </div>
 	    <div>
        	       <a href="https://github.com/Mag-Aegis/index.html" target="_blank" rel="noopener noreferrer">__ On GitHub__ </a>
