--- a/Project-1/Apache_sample.html
+++ b/Project-1/Apache_sample.html
@@ -3,11 +3,11 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Project 1</title>
+   <title>lab 10, Responsive Web Page</title>
    <link href="index.css" rel=stylesheet>
 </head>
 <body>
-	<main class="imgcontainerv2">
+	<main class="headercontainer">
 		<header class="header">
 			<section class="exc8_HeroSection">
 				<div class="headerimage">
@@ -34,28 +34,20 @@
 			</section>
 		</header>
 	</main>
-
 	<main class="maincontainer">
 	   <aside>
 		   <div class="leftblock1">
-			   <img src="images/zhongwei-desert-diamond-hotel-shuishi_2.jpg" class="introImage1">
+			   <img src="images/install-postfix-debian-10-02-696x371-3217709592.png" class="introImage1">
 		   </div>
 	   </aside>
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
-				<p class="msg"><em id="parag">Working with Apache</em><br><p class="msg">Apache is interesting as it can be implemented the same as any virtualization architecture model. The network programming of the httpd daemon is actually the pillar of its success, let's take a look at how we would manage a website. Debian's default Apache2 installation attempts to make adding and removing modules, virtual hosts, and extra configuration directives as flexible as possible, in order to make automating the changes and administering the server as easy as possible. This is how we would get things done in debian. Due to the use of environment variables, apache2 needs to be started/stopped with '/etc/init.d/apache2', apachectl, or apache2ctl. Calling '/usr/bin/apache2' directly will not work with the default configuration. To call apache2 with specific command line arguments, just call apache2ctl with the same arguments.</p>
+				<p class="msg"><em id="parag">Apache2ctl is the swiss army knife for working with the daemon (kernel process) Running the Apache http server from a workstation, there would be primitives in the environment such as what init system is running the kernel, or the type of security configurations available to the system.</p>
 				<div class="heroinfo"><a href="index.html" class="herotext">back to home</a>
 				</div>
 			</section>
 		</div>
 					</main>
-
-	<h1 align="center">Beautiful picture of the same tree - Malus Ioensis</h1>
-   <figure class="images">
-	<img class="slides" src="images/gcc2.png">
-   </figure>
-	<h3><i>Learn & Explore</i></h3>
-	<p>Apache2ctl is the swiss army knife for working with the daemon (kernel process) Running the Apache http server from a workstation, there would be primitives in the environment such as what init system is running the kernel, or the type of security configurations available to the system.</p>
    <main class="footercontainer">
    <footer class="footer">
 	   <section class="footercustomer">
