--- a/Project-1/Postfix.html
+++ b/Project-1/Postfix.html
@@ -7,20 +7,26 @@
    <link href="index.css" rel=stylesheet>
 </head>
 <body>
-	<main class="imgcontainerv2">
+	<main class="headercontainer">
 		<header class="header">
 			<section class="exc8_HeroSection">
-				<div class="excImage1">
+				<div class="headerimage">
 					<div>
 						<nav class="navbar">
 							<ul class="flexNav">
-								<a href="" rel="noopener noreferrer" class="flexNav">Portals</a>
+								<a href="https://httpd.apache.org" rel="noopener noreferrer" class="flexNav">Apache</a>
 							</ul>
 							<ul class="flexNav">
-								<a href="https://github.com/Mag-Aegis/Perl-Apache-CGI-HTML-Automating" class="flexNav">Cloud-Compute</a>
+								<a href="https://gcc.gnu.org" rel="noopener noreferrer" class="flexNav">GCC</a>
 							</ul>
 							<ul class="flexNav">
-					<a href="http://www.postfix.org/" rel="noopener noreferrer" class="cardlink">Postfix</a>
+								<a href="http://www.postfix.org/" class="flexNav">Postfix</a>
+							</ul>
+							<ul class="flexNav">
+					<a href="http://www.metacpan.org/" class="flexNav">CPAN</a>
+							</ul>
+							<ul class="flexNav">
+								<a href="https://libreboot.org" rel="noopener noreferrer" class="flexNav">Libreboot</a>
 							</ul>
 						</nav>
 					</div>
