--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -1,11 +1,3 @@
-<!-- Each card includes one image, and my choice of link in the form of the card itself The webpage should have a title centered at the top.
-The header should contain navigation tabs aligned to the left.
-The main content should include:
-An introduction image with a text overlay using position: relative and position: absolute.
-A card section occupying 70% of the screen width, with six cards inside.
-A right column next to the card section, containing two information cards.
-A footer should be included at the bottom with two different text sizes.
- -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,8 +43,6 @@ A footer should be included at the bottom with two different text sizes.
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
 				<p class="msg"><em id="parag">Facilities for Distributed Computing</em><br><p class="msg">Welcome .. this website is a pool of useful resource links and tangents. Perl, PL/SQL, RDBMS, C#, APACHE, WEBMASTER, stateful firewalling, NAT, XML, AJAX, CGI, Scripting, Web-Server, X Server, Threads, SOCKETS, DHCP, Concurrent Versioning System, EMACS, Source code, Document Object Model, DNS, REST, Curses, CPAN, XQuery, GPG, free hardware, magic strings, ZFS, Gentoo, Sendmail, Vim, SNMP, edge computing, JQuery, C, Intel Management Engine</p>
-				<div class="heroinfo"><a href="#" class="herotext">demonstration</a>
-				</div>
 			</section>
 		</div>
 					</main>
@@ -68,7 +58,7 @@ A footer should be included at the bottom with two different text sizes.
 
 				<p class="msg">Hosting webservers is typically done with a service. Apache is one such service. Web site content can take many different forms, but may be broadly divided into static and dynamic content. The many aspects of keeping a domain open with connections live and secure requires large software repoitaire as seen in webserver scripts and hooks. Webpages are a unique product of an architecture provided such as Apache. For instance Apache supports many languages like Perl, which in itself can be used to automate networked software. Web site content can take many different forms, but may be broadly divided into static and dynamic content.
 </p>
-				<div class="heroinfo"><a href="Apache_sample.html" class="herotext">demonstration</a>
+				<div class="heroinfo"><a href="Apache_sample.html" class="herotext">More Info</a>
 				</div>
 			</section>
 		</div>
@@ -84,7 +74,7 @@ A footer should be included at the bottom with two different text sizes.
 	   		<section class="infosection1">
 				<h2 class="linkFont">GCC</h2>
 				<p class="msg">The GNU Compiler Collection (GCC) is a collection of compilers from the GNU Project that support various programming languages, hardware architectures and operating systems. The Free Software Foundation (FSF) distributes GCC as free software under the GNU General Public License (GNU GPL). GCC is a key component of the GNU toolchain which is used for most projects related to GNU and the Linux kernel. With roughly 15 million lines of code in 2019, GCC is one of the largest free programs in existence. It has played an important role in the growth of free software, as both a tool and an example.</p>
-				<div class="heroinfo"><a href="GCC_sample.html" class="herotext">demonstration</a>
+				<div class="heroinfo"><a href="GCC_sample.html" class="herotext">More Info</a>
 				</div>
 			</section>
 		</div>
@@ -99,7 +89,7 @@ A footer should be included at the bottom with two different text sizes.
 	   		<section class="infosection1">
 				<h2 class="linkFont">Postfix</h2>
 				<p class="msg">Postfix is a secure and easy-to-use MTA for Unix. It's a mail agent⸺   software that mail servers use to route email. An architecture for handling MIME files and other encoding standards. The Simple Mail Transport Protocol (SMTP) is used for sending messages, and either the Post Office Protocol (POP) or Internet Mail Application (IMAP) is used for retrieving messages. SMTP, defined in RFC 2821, describes the conversation that takes place between two hosts acress a network to exchange email messages. The IMAP (RFC 2060) and  POP (RFC 1939) protocols describe how to retrieve messages from a message store. The IMAP protocol was developed after POP and offers additional features. In both protocols, email messages are kept in a central server for message recipients who generally retrieve them across a network. HTML is also a MIME encoding allowing the format to be mailed. Emails which are MIME encoded (mostly) enable embedded HTML and Enriched text, another MIME type formatting for emails. Interestingly [HTML exploit on security </p>
-				<div class="heroinfo"><a href="#" class="herotext">showcase</a>
+				<div class="heroinfo"><a href="Postfix.html" class="herotext">More Info</a>
 				</div>
 			</section>
 		</div>
@@ -114,7 +104,7 @@ A footer should be included at the bottom with two different text sizes.
 	   		<section class="infosection1">
 				<h2 class="linkFont">CPAN</h2>
 				<p class="msg">The Comprehensive Perl Archive Network facilitates access to the entire archive network MetaCPAN is an open source search engine for the Comprehensive Perl Archive Network (CPAN). From here one can download from a first class mirror to the canonical CPAN content. The front-end is MetaCPAN. extendedAwk script packages, Gtk helpers, packages and modules are found here.</p>
-				<div class="heroinfo"><a href="#" class="herotext">showcase</a>
+				<div class="heroinfo"><a href="CPAN_sample.html" class="herotext">More Info</a>
 				</div>
 			</section>
 		</div>
@@ -129,7 +119,7 @@ A footer should be included at the bottom with two different text sizes.
 	   		<section class="infosection1">
 				<h2 class="linkFont">Libreboot</h2>
 				<p class="msg">Libreboot is a community-oriented project, with a focus on helping users escape proprietary boot firmware;  in any way you like. When you see Intel talk about their Boot Guard (which prevents coreboot by only letting firmware signed by them be executed) or other vendors imposing similar restrictions, and you hear them talk about “security”, they are only talking about their security, not yours. In the Libreboot project, it is reversed; we see Intel Boot Guard and similar such technologies as an attack on your freedom over your own property (your computer), and so, we make it our mission to help you wrest back such control. Libreboot gives you Free Software that you otherwise can’t get with most other boot firmware, plus faster boot speeds and better security. It’s extremely powerful and configurable for many use cases. Libreboot provides a sleek, fast boot experience for Linux/BSD systems, based on coreboot which is regularly audited and improved.</p>
-				<div class="heroinfo"><a href="#" class="herotext">showcase</a>
+				<div class="heroinfo"><a href="libreboot_sample.html" class="herotext">More Info</a>
 				</div>
 			</section>
 		</div>
