--- a/Project-1/libreboot_sample.html
+++ b/Project-1/libreboot_sample.html
@@ -7,10 +7,10 @@
    <link href="index.css" rel=stylesheet>
 </head>
 <body>
-	<main class="imgcontainerv2">
+	<main class="headercontainer">
 		<header class="header">
 			<section class="exc8_HeroSection">
-				<div class="excImage1">
+				<div class="headerimage">
 					<div>
 						<nav class="navbar">
 							<ul class="flexNav">
@@ -38,7 +38,84 @@
 	<main class="maincontainer">
 	   <aside>
 		   <div class="leftblock1">
-			   <img src="images/zhongwei-desert-diamond-hotel-shuishi_2.jpg" class="introImage1">
+			   <img src="images/install-postfix-debian-10-02-696x371-3217709592.png" class="introImage1">
+		   </div>
+	   </aside>
+	   	<div class="rightblock1">
+	   		<section class="infosection1">
+				<p class="msg"><em id="parag">Ever wanted to dump the contents of an eMMC chip? I have, why not start with flashing a bios chip and downloading coreboot, I mean libreboot. This is an interesting project that delves into such things. Here are some pictures.</p>
+				<div class="heroinfo"><a href="index.html" class="herotext">back to home</a>
+				</div>
+			</section>
+		</div>
+					</main>
+   <main class="footercontainer">
+   <footer class="footer">
+	   <section class="footercustomer">
+		<p class="footertitle">Navigation!
+		<ul class="footerlist">
+		<li >Sign Up <li>
+		<li >Sign Up <li>
+		<li >Sign Up <li></ul>
+  	 </section>
+	<section class="footerfollow">
+		<p class="footertitle">References
+		<ul class="footerlist">
+		<li >Sign Up <li>
+		<li >Sign Up <li>
+		<li >Sign Up <li></ul>
+	</section>
+	<section class="footerfollow">
+		<p class="footertitle">Email</p>
+		<div class="socialmedia"><a href=""><img class="socialmedia" src="images/Chat_icon.png"></a>
+		<a href=""><img class="socialmedia" src="images/Logo_of_Twitter.svg.png"></a></div>
+	<p>Email: <a href="mailto:jorge.garib11@student.qcc.cuny.edu">jorge.garib11@student.qcc.cuny.edu</a></p><p class="">Created by Jorge Garib Guillen</p>
+	</section>
+     </footer>
+     </main>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>lab 10, Responsive Web Page</title>
+   <link href="index.css" rel=stylesheet>
+</head>
+<body>
+	<main class="headercontainer">
+		<header class="header">
+			<section class="exc8_HeroSection">
+				<div class="headerimage">
+					<div>
+						<nav class="navbar">
+							<ul class="flexNav">
+								<a href="https://httpd.apache.org" rel="noopener noreferrer" class="flexNav">Apache</a>
+							</ul>
+							<ul class="flexNav">
+								<a href="https://gcc.gnu.org" rel="noopener noreferrer" class="flexNav">GCC</a>
+							</ul>
+							<ul class="flexNav">
+								<a href="http://www.postfix.org/" class="flexNav">Postfix</a>
+							</ul>
+							<ul class="flexNav">
+					<a href="http://www.metacpan.org/" class="flexNav">CPAN</a>
+							</ul>
+							<ul class="flexNav">
+								<a href="https://libreboot.org" rel="noopener noreferrer" class="flexNav">Libreboot</a>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</section>
+		</header>
+	</main>
+	<main class="maincontainer">
+	   <aside>
+		   <div class="leftblock1">
+			   <img src="images/install-postfix-debian-10-02-696x371-3217709592.png" class="introImage1">
 		   </div>
 	   </aside>
 	   	<div class="rightblock1">
