--- a/Project-1/GCC_sample.html
+++ b/Project-1/GCC_sample.html
@@ -3,14 +3,14 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Project 1</title>
+   <title>lab 10, Responsive Web Page</title>
    <link href="index.css" rel=stylesheet>
 </head>
 <body>
-	<main class="imgcontainerv2">
+	<main class="headercontainer">
 		<header class="header">
 			<section class="exc8_HeroSection">
-				<div class="excImage1">
+				<div class="headerimage">
 					<div>
 						<nav class="navbar">
 							<ul class="flexNav">
@@ -37,38 +37,16 @@
 	<main class="maincontainer">
 	   <aside>
 		   <div class="leftblock1">
-			   <img src="images/zhongwei-desert-diamond-hotel-shuishi_2.jpg" class="introImage1">
+			   <img src="images/install-postfix-debian-10-02-696x371-3217709592.png" class="introImage1">
 		   </div>
 	   </aside>
 	   	<div class="rightblock1">
 	   		<section class="infosection1">
-				<p class="msg"><em id="parag">A look at GCC</em><br><p class="msg">The GCC gnu c compiler is a stable compiler with a suite of options for fine tuning the assembler, linker, editor and output executables for a project. Options for controlling the standard against which a source file is compiled range from industry standard versions to oldest revisions and most recent revisions. I like using it for it's support for MASM, ASM and NASM. A well written c++ program can be compiled against a certain standard. Cross-compiling is also possible, as well as compiling for different macines.</p>
+				<p class="msg"><em id="parag">The GCC gnu c compiler is a stable compiler with a suite of options for fine tuning the assembler, linker, editor and output executables for a project. Options for controlling the standard against which a source file is. I use it for it's support of MASM, ASM and NASM. A well written c++ program also compiles when the standard library is linked. Cross-compiling is also possible, as well as compiling for different macines.</p>
 				<div class="heroinfo"><a href="index.html" class="herotext">back to home</a>
 				</div>
 			</section>
 		</div>
-					</main>
-	<main class="samplecontainer">
-	   	<div class="textblock">
-	   		<section class="infosection1">
-				<p class="msg">The GCC gnu c compiler is a stable compiler with a suite of options for fine tuning the assembler, linker, editor and output executables for a project. Options for controlling the standard against which a source file is compiled range from industry standard versions to oldest revisions and most recent revisions. I use it for it's support of MASM, ASM and NASM. A well written c++ program also compiles when the standard library is linked. Cross-compiling is also possible, as well as compiling for different macines.</p>
-				<a href="index.html" class="herotext">back to home</a>
-			</section>
-		</div>
-	   <aside>
-		   <div class="imageblock">
-			   <img src="images/gcc2.png" class="introImage1">
-		   </div>
-	   </aside>
-					</main>
-	<main class="samplecontainer">
-	   	<div class="textblock">
-	   		<section class="infosection1">
-				<br><p class="msg">The GCC gnu c compiler is a stable compiler with a suite of options for fine tuning the assembler, linker, editor and output executables for a project. Options for controlling the standard against which a source file is. I use it for it's support of MASM, ASM and NASM. A well written c++ program also compiles when the standard library is linked. Cross-compiling is also possible, as well as compiling for different macines.</p>
-				<a href="index.html" class="herotext">back to home</a>
-			</section>
-			   <img src="images/gcc2.png" class="sampleImage">
-		   </div>
 					</main>
    <main class="footercontainer">
    <footer class="footer">
