--- a/Bootstrap/Lab-11/Lab-11.html
+++ b/Bootstrap/Lab-11/Lab-11.html
@@ -8,20 +8,20 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <body>
     <h1 class="mt-4 text-info" >Lab 11 Intro to Bootstrap!</h1>
-    <h2 class="ms-2 text-success bg-dark p-5"> By: Students Full Name</h2>
+    <h2 class="ms-2 text-success bg-dark p-5"> By: Jorge Garib Guillen</h2>
     <h2 class="display-2 mb-5 text-muted"> By: Students Full Name</h2>
     <p class="h5">This is my first application in Bootstrap</p>
 
     <h2>Images</h2>
     <figure class="m5">
-	    <img class="rounded w-25" src="beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain">
-	    <figcaption class="mb-5">Round image</figcaption>
+	    <img class="rounded w-25 ms-2" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain">
+	    <figcaption class="mb-5 figure-caption ms-2">Round image</figcaption>
 
-	    <img class="rounded-circle w-25" src="beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain">
-	    <figcaption class="mb-5">rounded circle image</figcaption>
+	    <img class="rounded-circle w-25 ms-2" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain">
+	    <figcaption class="mb-5 figure-caption ms-2">rounded circle image</figcaption>
 
-	    <img class="img-thumbnail w-25" src="beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain">
-	    <figcaption class="mb-5">Thumbnail image</figcaption>
+	    <img class="img-thumbnail w-25 ms-2" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain">
+	    <figcaption class="mb-5 figure-caption ms-2">Thumbnail image</figcaption>
     </figure>
 
 
@@ -29,11 +29,32 @@
     <p>Food Shopping</p>
     <ul class="list-group w-25 m-5">
 	    <li class="list-group-item">Apple</li>
-	    <li class="list-group-item active"></li>
+	    <li class="list-group-item active">Milk</li>
 	    <li class="list-group-item">Cereal</li>
     </ul>
 
 
+    <h2 class="center">Lab 11 List</h2>
+    <p>Picture List</p>
+    <ul class="list-group w-35 m-5">
+	    <li class="list-group-item">1
+    <figure class="m5"><img class="rounded w-25" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain"><figcaption class="mb-5 figure-caption">The GCC gnu c compiler is a stable compiler with a suite of options for fine tuning the assembler, linker, editor and output executables for a project. Options for controlling the standard against which a source file is. I use it for it's support of MASM, ASM and NASM. A well written c++ program also compiles when the standard library is linked. Cross-compiling is also possible, as well as compiling for different macines.</p></figcaption></figcaption>
+    </figure>
+	    </li>
+
+	    <li class="list-group-item">2
+    <figure class="m5">
+	    <img class="rounded w-25" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain">
+	    <figcaption class="mb-5 figure-caption">Round image<p class="right">The GCC gnu c compiler is a stable compiler with a suite of options for fine tuning the assembler, linker, editor and output executables for a project. Options for controlling the standard against which a source file is. I use it for it's support of MASM, ASM and NASM. A well written c++ program also compiles when the standard library is linked. Cross-compiling is also possible, as well as compiling for different macines.</p></figcaption>
+    </figure>
+	    </li>
+
+	    <li class="list-group-item">3
+    <figure class="m5">
+	    <img class="rounded w-25" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of a mountain">
+	    <figcaption class="mb-5 figure-caption">Round image<p class="right">The GCC gnu c compiler is a stable compiler with a suite of options for fine tuning the assembler, linker, editor and output executables for a project. Options for controlling the standard against which a source file is. I use it for it's support of MASM, ASM and NASM. A well written c++ program also compiles when the standard library is linked. Cross-compiling is also possible, as well as compiling for different macines.</p></figcaption>
+	    </li>
+    </ul>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js">
     </script>
 
