--- a/index.html
+++ b/index.html
@@ -43,13 +43,10 @@
        	       <a href="Project-1/index.html" target="_blank" rel="noopener noreferrer">Project 1</a>
             </div>
 	    <div>
-       	       <a href="Bootstrap/Lab-11.html" target="_blank" rel="noopener noreferrer">Lab-11 Creating a Stylish List with Colors and Typography in Bootstrap</a>
+       	       <a href="Bootstrap/Lab-11_Creating_a_Stylish_List_with_Colors_and_Typography_in_Bootstrap/Lab-11.html" target="_blank" rel="noopener noreferrer">Lab-11 Creating a Stylish List with Colors and Typography in Bootstrap</a>
             </div>
 	    <div>
-       	       <a href="Bootstrap/Lab-12.html" target="_blank" rel="noopener noreferrer">Lab-12 Collapsible, Cards, Grid, Layout</a>
-            </div>
-	    <div>
-       	       <a href="https://github.com/Mag-Aegis/index.html" target="_blank" rel="noopener noreferrer">Bootstrap</a>
+       	       <a href="Bootstrap/Lab-12_Collapsible_Cards_Grid_Layout/index.html" target="_blank" rel="noopener noreferrer">Lab-12 Collapsible, Cards, Grid, Layout</a>
             </div>
 	    <div>
        	       <a href="https://github.com/Mag-Aegis/index.html" target="_blank" rel="noopener noreferrer">__ On GitHub__ </a>
