--- a/Bootstrap/Lab-12_Collapsible_Cards_Grid_Layout/index.html
+++ b/Bootstrap/Lab-12_Collapsible_Cards_Grid_Layout/index.html
@@ -115,23 +115,24 @@
     <section class="container mt-5">
 	    <div class="row justify-content-center">
 		    <div class="col-xl-2 col-lg-3 col-md-4 col-lg-5 bg-light rounded m-1 p-3">
-			    <img class="w-100" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image">
-			    <h2 class="text-danger mt-3">Pictures</h2>
+			    <img class="w-100" src="images/21.jpg" alt="image">
+			    <h2 class="text-danger mt-3">WoW screenshot</h2>
+			    <p>"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitless adventure."</p>
+		    </div>
+		    <div class="col-xl-2 col-lg-3 col-md-4 col-lg-5 bg-light rounded m-1 p-3">
+			    <img class="w-100" src="images/Durotar.jpg" alt="in-game image">
+			    <h2 class="text-danger mt-3">WoW screenshot</h2>
 			    <p>"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
 		    </div>
 		    <div class="col-xl-2 col-lg-3 col-md-4 col-lg-5 bg-light rounded m-1 p-3">
-			    <img class="w-100" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="in-game image">
-			    <h2 class="text-danger mt-3">Pictures</h2>
-			    <p>"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
-		    </div>
-		    <div class="col-xl-2 col-lg-3 col-md-4 col-lg-5 bg-light rounded m-1 p-3">
-			    <img class="w-100" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="in-game image">
-			    <h2 class="text-danger mt-3">Pictures</h2>
+			    <img class="w-100" src="images/classic-wow-professions-best-header.jpg" alt="in-game image">
+			    <h2 class="text-danger mt-3">WoW screenshot</h2>
 			    <p>"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
 		    </div>
 		    <div class="col-xl-2 col-lg-5 col-md-4 bg-light rounded m-1 p-3">
-			    <img class="w-100" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="in-game image">
-			    <h2 class="text-danger mt-3">Pictures</h2>
+			    <img class="w-100" src="images/maxresdefault.jpg" alt="in-game image">
+
+			    <h2 class="text-danger mt-3">WoW screenshot</h2>
 			    <p>"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
 		    </div>
     </section>
@@ -140,9 +141,10 @@
     <section class="container">
 	    <div class="row justify-content-center">
 		    <!-- Design 1 -->
-		    <div class="col-md-3 bg-light m-3">
+		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
 			    <section class="card-body">
-				    <img class="card-img" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of">
+				    <img class="card-img" src="images/e74f9115-69d3-49fb-b549-99861d3055cb.jpg" alt="image of">
+
 				    <h2 class="card-title text-info">Computer game</h2>
 				    <p class="card-subtitle">Computer Games</p>
 				    <p class="card-text">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
@@ -153,7 +155,7 @@
 		    </div>
 
 		    <!-- Design 2-->
-		    <div class="col-md-3 card bg-light m-3">
+		    <div class="col-lg-3 col-md-11 col-sm-11 card bg-light m-3">
 			    <section class="card-header">
 				    <h2 class="card-title text-warning">Fall scenery</h2>
 				    <p class="card-subtitle">Landscape with mountains and lakes with sky</p>
@@ -174,13 +176,14 @@
 		    </div>
 
 		    <!-- Design 3-->
-		    <div class="col-md-3 card bg-light m-3">
+		    <div class="col-lg-3 col-md-11 card bg-light m-3">
 			    <section class="card-header">
-				    <img class="card-img" src="images/beautiful-landscape-with-mountains-and-lakes-with-sky-in-italy-1268234259.jpg" alt="image of">
+				    <img class="card-img" src="images/720full-phantasy-star-online-episode-i-&-ii-plus-screenshot.jpg" alt="image of">
+
 				    <div class="card-body bg-dark">
 					    <h2 class="card-title text-warning"></h2>
-					    <p class="card-text text-light">Insert theme title</p>
-					    <p class="card-subtitle text-light">"Experience the intensity of the World's #1 Online Game. Enter the World of Warcraft... Descend into the World of Warcraft and join thousands of mighty heroes in an online workd of myth, magic, and limitles adventure."</p>
+					    <p class="card-text text-light">Scifi Online Game PSO</p>
+					    <p class="card-subtitle text-light">"A screenshot of PSO. Phantasy Star Online is an online role-playing game developed by Sonic Team and published by Sega in 2000 for the Dreamcast. It was the first successful online RPG for game consoles; players adventure with up to three others over the internet to complete quests, collect items and fight enemies in real-time action RPG combat."</p>
 				    </div>
 
 				    <div class="card-footer bg-warning">
