--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
        	       <a href="Bootstrap/Lab-12_Collapsible_Cards_Grid_Layout/index.html" target="_blank" rel="noopener noreferrer">Lab-12 Collapsible, Cards, Grid, Layout</a>
             </div>
 	    <div>
+       	       <a href="Bootstrap/Lab-13_Modal_Windows/index.html" target="_blank" rel="noopener noreferrer">Lab-13_Modal_Windows</a>
+            </div>
+	    <div>
        	       <a href="https://github.com/Mag-Aegis/index.html" target="_blank" rel="noopener noreferrer">__ On GitHub__ </a>
             </div>
          </ul>
