--- a/Bootstrap/Lab-13_Modal_Windows/index.html
+++ b/Bootstrap/Lab-13_Modal_Windows/index.html
@@ -198,6 +198,9 @@
 	    </div>
     </section>
 
+	<h2>Grid System</h2>
+    <section class=""></section>
+
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
