--- a/Bootstrap/Lab-13_Modal_Windows/index.html
+++ b/Bootstrap/Lab-13_Modal_Windows/index.html
@@ -15,7 +15,7 @@
 		    <div class="card-header">Summer Vacation</div>
 		    <p class="card-text p-3">Best summer vacation in the USA</p>
 		    <div class="card-footer">
-			    <!-- button to open modal window -->>
+			    <!-- button to open modal window -->
 			    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalwindow">More info</button>
 		    </div>
 	    </section>
